# nbs-ssh

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  spawn_workers.sh
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.nbs/: plan.md  supervisor.md
.nbs/workers/: worker-001-foundation.md  worker-002-auth-matrix.md  worker-003-streaming.md  worker-004-keepalive.md  worker-005-supervisor.md  worker-006-forwarding.md  worker-007-automation.md  worker-008-evidence.md  worker-009-windows.md  worker-010-mock-server.md  worker-011-test-migration.md  worker-012-cli.md  worker-013-docs.md  worker-014-streamexec-fix.md  worker-015-keyauth.md  worker-016-interactive.md
docker/: Dockerfile  authorized_keys  docker-compose.yml
docker/keys/: test_key
docs/: api-reference.md  debugging.md  getting-started.md  known-security-issues.md  testing.md  user-guide.md
src/nbs_ssh/: __init__.py  __main__.py  auth.py  automation.py  config.py  connection.py  errors.py  escape.py  events.py  evidence.py  forwarding.py  host_key.py  interaction.py  keepalive.py  multiplex.py  platform.py  proxy.py  secure_string.py  supervisor.py  validation.py
src/nbs_ssh/testing/: __init__.py  mock_server.py
tests/: __init__.py  conftest.py  test_auth.py  test_automation.py  test_certificate_auth.py  test_chaos.py  test_cli.py  test_config.py  test_escape.py  test_evidence.py  test_forwarding.py  test_hello_ssh.py  test_host_key.py  test_interaction_handler.py  test_keepalive.py  test_keyboard_interactive.py  test_known_hosts.py  test_multiplex.py  test_pkcs11.py  test_platform.py  test_proxy.py  test_proxycommand.py  test_secure_string.py  test_security.py  test_shell.py  test_streaming.py  test_supervisor.py  test_validation.py
