[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nbs-ssh"
version = "0.1.0"
description = "AI-inspectable SSH client library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Dr Alex Turner"}
]
dependencies = [
    "asyncssh>=2.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "hypothesis>=6.0",
]
pkcs11 = [
    "python-pkcs11>=0.7.0",
]
all = [
    "python-pkcs11>=0.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
