[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nbs-ssh"
version = "0.1.1"
description = "AI-inspectable SSH client library and CLI — a pure-Python alternative to OpenSSH with structured JSONL diagnostics, async streaming, and full auth method support."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Dr Alex Turner"}
]
keywords = [
    "ssh",
    "asyncssh",
    "cli",
    "async",
    "remote",
    "devops",
    "diagnostics",
    "jsonl",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "asyncssh>=2.14.2",  # Minimum version excludes CVE-2023-46445, CVE-2023-46446, CVE-2023-48795
]

[project.urls]
Homepage = "https://github.com/SonicField/nbs-ssh"
Repository = "https://github.com/SonicField/nbs-ssh"
Issues = "https://github.com/SonicField/nbs-ssh/issues"
Documentation = "https://github.com/SonicField/nbs-ssh/tree/master/docs"

[project.scripts]
nbs-ssh = "nbs_ssh.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.0",
    "hypothesis>=6.0",
]
pkcs11 = [
    "python-pkcs11>=0.7.0",
]
fido2 = [
    "fido2>=1.0.0",
]
all = [
    "python-pkcs11>=0.7.0",
    "fido2>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
